k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-kafka-app
  template:
    metadata:
      labels:
        app: spring-kafka-app
    spec:
      imagePullSecrets:
        - name: dockerhub-key
      containers:
        - name: spring-kafka-container
          image: otizaaa/otis-app:latest
          ports:
            - containerPort: 8080
