k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-kafka-service
spec:
  selector:
    app: spring-kafka-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
