Ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-kafka-ingress
  namespace: default
spec:
  rules:
    - host: otieno-ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-kafka-service
                port:
                  number: 80
